Refactor project structure by renaming packages and consolidating service files